faster coverage calculation

--- a/php/src/application/pages/projects/_any/Scope/Traceability.phtml
+++ b/php/src/application/pages/projects/_any/Scope/Traceability.phtml
@@ -15,7 +15,7 @@
  * @version $Id$
 -->
  
-<?=$this->publish($this->project->traceability)?>
+<?=$this->publish($this->project->deliverables)?>
 
 <h1>Traceability Matrix</h1>
 
