--- a/php/src/application/pages/projects/_any/Scope/Coverage.phtml
+++ b/php/src/application/pages/projects/_any/Scope/Coverage.phtml
@@ -15,6 +15,8 @@
  * @version $Id$
 -->
  
+<?=$this->publish($this->project->deliverables)?>
+
 <? $this->includeCSS('pages/projects/_any/Scope/Coverage/matrix.css') ?>
 
 <h1>Traceability Coverage</h1>
