requirements in coverage

--- a/php/src/application/pages/projects/_any/Scope/Coverage.phtml
+++ b/php/src/application/pages/projects/_any/Scope/Coverage.phtml
@@ -22,9 +22,10 @@
 <h1>Traceability Coverage</h1>
 
 <? $options = array(
+    'requirements',
+    'design',
     'classes',
     'functional',
-    'design',
     'issues',
 ) ?>
 
