show decimals in coverage

--- a/php/src/application/pages/projects/_any/Scope/Coverage.phtml
+++ b/php/src/application/pages/projects/_any/Scope/Coverage.phtml
@@ -71,7 +71,7 @@
     </div>  
     
     <p>Coverage: 
-        <b><?=round($this->project->traceability->getCoverage($source, $dest) * 100)?>%</b>,
+        <b><?=round($this->project->traceability->getCoverage($source, $dest) * 100, 2)?>%</b>,
         <?=count($dest)?> elements to be covered by <?=count($source)?> sources.</p>
 <? endif; ?>
 
