show design map for functional requirements

--- a/php/src/application/pages/projects/_any/Scope/SRS/Functional.phtml
+++ b/php/src/application/pages/projects/_any/Scope/SRS/Functional.phtml
@@ -36,6 +36,16 @@
     ->addColumn('priority', _t('Pri.'))
     ->addColumn('isAccepted', _t('Acc.'))
         ->addConverter('(${a1} ? ${a2}->attributes["accepted"] : false)')
+    ->addColumn('isBaselined', _t('Base.'))
+        ->addConverter('(${a1} ? "yes" : false)')
+    ->addColumn('type', 'Design')
+        ->addConverter(
+            FaZend_Callback::factory(
+                '${a2}->getDesignMap(${i1})'
+            )
+            ->inject($this->project)
+        )
+        ->addFormatter('true', 'font-family:Courier; white-space:pre')
     ->addColumn('description', _t('Description'))
     ->addColumn('attributes', _t('Attributes'))
     ?>
