design orphans introduced; back to files in session

--- a/php/src/application/pages/projects/_any/Scope/DesignModel.phtml
+++ b/php/src/application/pages/projects/_any/Scope/DesignModel.phtml
@@ -22,8 +22,11 @@
 <h1>Design Model</h1>
 
 <?=$this->bar()
+    ->addLink('Orphans', 'Orphans')
+    ->addLink('Packages', 'Packages')
     ->addLink('Classes', 'Classes')
     ->addLink('Files', 'Files')
+    ->addLink('Methods', 'Methods')
     ->addLink('TestCases', 'Test Cases')
     ?>
 
