--- a/php/src/application/pages/projects/_any/Scope/SRS.phtml
+++ b/php/src/application/pages/projects/_any/Scope/SRS.phtml
@@ -28,6 +28,7 @@
     ->addLink('UseCases', 'Use Cases')
     ->addLink('Functional', 'Functional Requirements')
     ->addLink('QOS', 'Quality of Service')
+    ->addLink('Queue', 'Implementation Queue')
     ?>
 
 <?=$this->tree()
