layout minor fix

--- a/php/src/application/views/scripts/paginationControl.phtml
+++ b/php/src/application/views/scripts/paginationControl.phtml
@@ -46,6 +46,6 @@
             <span style="color: grey;"><?=_t('next')?></span>
         <? endif; ?>
         
-        <?=_t('%d total', $this->totalItemCount)?>
+        <span style="color: grey;"><?=_t('%d total', $this->totalItemCount)?></span>
     </div>
 <? endif;
