baselines introduced and many massive changes with traceability

--- a/php/src/application/pages/projects/_any/Integration.phtml
+++ b/php/src/application/pages/projects/_any/Integration.phtml
@@ -12,12 +12,14 @@
  * 568 Ninth Street South 202, Naples, Florida 34102, USA
  * tel. +1 (239) 935 5429
  *
+ * @version $Id$
 -->
  
 <h1>Integration Management</h1>
 
 <?=$this->bar()
     ->setStyle('stairs')
+    ->addLink('Baselines', 'Baselines')
     ->addLink('Objectives', 'Objectives')
     ->addLink('Metrics', 'Project Metrics')
     ->addLink('EVA', 'Earned Value Analysis')
