--- a/php/src/application/pages/projects/_any/Integration/Baselines.phtml
+++ b/php/src/application/pages/projects/_any/Integration/Baselines.phtml
@@ -25,7 +25,7 @@
     ->addColumn('description', _t('Description'))
     ->addColumn('length', _t('Length'))
     ->addOption('switch to', '?switch={__key}')
-    ->addOption('diff', '?diff={__key}')
+    ->addOption('diff', '?diff={__key}'/*, '${a2} == "trunk"'*/)
     ->addOption('__key', '?view={__key}')
     ?>
     
