invitation sender to suppliers

--- a/php/src/application/pages/PMO/StaffRequests/requests/_any.phtml
+++ b/php/src/application/pages/PMO/StaffRequests/requests/_any.phtml
@@ -26,7 +26,7 @@
     Quality Threshold: <?=$request->threshold?>%
 </p>
 
-<p>Suggested candidates:</p>
+<p>Suggested candidates (<?=$this->link('invite', 'send invitations', false)?>):</p>
 <? $index = 0; ?>
 <? foreach ($response as $item): ?>
 
