todo queue implemented

--- a/php/src/application/pages/projects/_any/Scope/DesignModel.phtml
+++ b/php/src/application/pages/projects/_any/Scope/DesignModel.phtml
@@ -22,6 +22,7 @@
 <h1>Design Model</h1>
 
 <?=$this->bar()
+    ->addLink('Todo', '@todo')
     ->addLink('Orphans', 'Orphans')
     ->addLink('Packages', 'Packages')
     ->addLink('Classes', 'Classes')
