--- a/php/src/application/pages/projects/_any/Scope/DesignModel/Todo.phtml
+++ b/php/src/application/pages/projects/_any/Scope/DesignModel/Todo.phtml
@@ -17,7 +17,7 @@
  
 <?=$this->publish($this->project->deliverables)?>
 
-<h1><tt>@todo</tt> Queue</h1>
+<h1><tt>@todo</tt> Queue (classes, files, methods)</h1>
 
 <?=$this->table()
     ->setSource($this->project->deliverables->todo)
