--- a/php/src/application/pages/wobots/_any.phtml
+++ b/php/src/application/pages/wobots/_any.phtml
@@ -39,6 +39,7 @@
     ->addColumn('created', 'Date')
     ->addColumn('getTitle', 'Title')
     ->addColumn('result', 'Decision made')
+    ->addColumn('cost', 'Cost')
 
     ->addOption('created', 'decisions/{__id}')
     ?>
