--- a/php/src/application/views/scripts/panel/shared.phtml
+++ b/php/src/application/views/scripts/panel/shared.phtml
@@ -14,6 +14,6 @@
  *
 -->
  
-<p class="shared">Document access granted to: <?=Model_User::getCurrentUser()->email?></p>
+<p class="shared">Document access granted to: <?=Model_User::me()->email?></p>
 
 <?=$this->document?>
