--- a/php/src/application/views/scripts/panel/login.phtml
+++ b/php/src/application/views/scripts/panel/login.phtml
@@ -43,12 +43,14 @@
                 $pwd = $resolver->resolve(${email}, "");
             } while (!$pwd && $resolver->hasMore());
             if (!$pwd) {
+                logg("Invalid login attempt: %s", ${email});
                 FaZend_Exception::raise(
                     "Login_Exception",
                     "User with this email is not found"
                 );
             }
             if ($pwd != ${password}) {
+                logg("Invalid password provided for: %s", ${email});
                 FaZend_Exception::raise(
                     "Login_Exception",
                     "Invalid password"
