--- a/php/src/application/views/scripts/panel/login.phtml
+++ b/php/src/application/views/scripts/panel/login.phtml
@@ -38,6 +38,7 @@
         ->fieldAttrib('class', 'btn')
         ->fieldAction(
             '
+            false;
             $resolver = new Model_Auth_Resolver();
             do {
                 $pwd = $resolver->resolve(${email}, "");
