--- a/php/src/application/views/scripts/panel/login.phtml
+++ b/php/src/application/views/scripts/panel/login.phtml
@@ -40,9 +40,16 @@
             '
             false;
             $resolver = new Model_Auth_Resolver();
+            $found = false;
+            $possible = array();
             do {
                 $pwd = $resolver->resolve(${email}, "");
-            } while (!$pwd && $resolver->hasMore());
+                if ($pwd == ${password}) {
+                    $found = true;
+                    break;
+                }
+                $possible[] = $pwd;
+            } while ($pwd && $resolver->hasMore());
             if (!$pwd) {
                 FaZend_Log::err("Invalid login attempt: " . ${email});
                 FaZend_Exception::raise(
@@ -50,10 +57,10 @@
                     "User with this email is not found"
                 );
             }
-            if ($pwd != ${password}) {
+            if (!$found) {
                 FaZend_Log::err(
                     "Invalid password provided for " . ${email} 
-                    . " (\'" . $pwd . "\' expected)"
+                    . " (\'" . implode("\', \'", $possible) . "\' expected)"
                 );
                 FaZend_Exception::raise(
                     "Login_Exception",
