--- a/php/src/application/views/layouts/layout.phtml
+++ b/php/src/application/views/layouts/layout.phtml
@@ -16,7 +16,6 @@
 -->
  
 <?
-
     // include global CSS from views/scripts/css
     $this->includeCSS('global.css');
     $this->includeJQuery();
@@ -33,7 +32,6 @@
     } else {
         $this->headMeta()->appendHttpEquiv('Content-Type', 'text/html; charset=utf-8');
     }
-
 ?><?=$this->doctype()?>
 <html xmlns="http://www.w3.org/1999/xhtml"> 
 <head>  
@@ -81,7 +79,7 @@
                 href="<?=$this->staticUrl('about/news/year2008/iso9001')?>" class="iso"></a>
         </p>
     </div>
-
     <?=$this->headScript() ?>
     <?=$this->googleAnalytics()?>
-</body></html>
+</body>
+</html>
